--- a/site_simulacaoFrancauto-master/simulacao.html
+++ b/site_simulacaoFrancauto-master/simulacao.html
@@ -12,8 +12,8 @@
        
     <header id='cabecalho'>    
     <hgroup>    
-    <h1>Talysson Cabeção</h1> <!--Título da página-->
-    <h2>Simulação de Veículos Seminovos</h2>
+    <h1>Francauto Volkswagen</h1> <!--Título da página-->
+    <h2>Simulação de Carros Seminovos</h2>
     </hgroup>
     
     <figure class='volks'>
